<resources>
    <string name="app_name">Bookstore</string>
    <string name="chooseEth">выбрать все</string>
    <string name="basket">Корзина</string>
    <string name="delete">удалить</string>
    <string name="toRegistration">к оформлению</string>
    <string name="publisher">Издательство:</string>
    <string name="countInWarehouse">Число на складе:</string>
    <string name="pagesNumber">Количество страниц:</string>
    <string name="coverType">Тип обложки:</string>
    <string name="reviews">Отзывы:</string>
    <string name="bookParameters">параметры книги</string>
    <string name="bookstore">Bookstore</string>
    <string name="putInBasket">ПОЛОЖИТЬ В КОРЗИНУ</string>
    <string name="searchInCategory">Поиск по категории</string>
    <string name="search">Поиск</string>
    <string name="orderRegistration">Регистрация заказа</string>
    <string name="fillForm">Заполните форму :</string>
    <string name="phoneNumber">№ телефона*</string>
    <string name="necessaryToFill">* -- обязательно для заполнения</string>
    <string name="name">Имя</string>
    <string name="city">Город*</string>
    <string name="street">Улица*</string>
    <string name="flat">№ квартиры*</string>
    <string name="porch">№ подъезда</string>
    <string name="floor">Этаж</string>
    <string name="endRegistration">Закончить</string>
    <string name="back">вернуться</string>
    <string name="house">Дом*</string>
    <string name="price">Цена(1/n):</string>
    <string name="foreignLit">Иностранная литература</string>
    <string name="kidLit">Детская литература</string>
    <string name="busienessLit">Бизнес-литература</string>
    <string name="fictionLit">Художественная литература</string>
    <string name="studyLit">Учебная литература</string>
    <string name="fnonfictionLit">Нехудожественная литература</string>
    <string name="input_search">Введите книгу или автора</string>
    <string name="orders">Заказы</string>
    <string name="company_name">OOO "Bookstore"</string>
    <string-array name="categoriesNames">
        <item>Иностранная литература</item>
        <item>Детская литература</item>
        <item>Бизнес-литература</item>
        <item>Художественная литература</item>
        <item>Учебная литература</item>
        <item>Нехудожественная литература</item>
    </string-array>
</resources>
