<?xml version="1.0" encoding="utf-8"?>

<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/glParameters"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:columnCount="2"
    android:padding="10dp"
    android:rowCount="5">

    <TextView
        android:layout_columnWeight="1"
        android:layout_margin="3dp"
        android:text="@string/publisher"
        android:textAlignment="inherit" />

    <TextView
        android:id="@+id/tvPublisher"
        android:layout_columnWeight="5"
        android:layout_margin="3dp" />

    <TextView
        android:layout_columnWeight="1"
        android:layout_margin="3dp"
        android:text="@string/countInWarehouse" />

    <TextView
        android:id="@+id/tvCount"
        android:layout_columnWeight="5"
        android:layout_margin="3dp" />

    <TextView
        android:layout_columnWeight="1"
        android:layout_margin="3dp"
        android:text="@string/pagesNumber" />

    <TextView
        android:id="@+id/tvPages"
        android:layout_columnWeight="5"
        android:layout_margin="3dp" />

    <TextView
        android:layout_columnWeight="1"
        android:layout_margin="3dp"
        android:text="@string/coverType" />

    <TextView
        android:id="@+id/tvCover"
        android:layout_columnWeight="5"
        android:layout_margin="3dp" />


</GridLayout>
