<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/llBasket"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="izenka.hfad.com.bookstore.BasketActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:background="@color/color9">

        <ImageView
            android:id="@+id/btnGoBack"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:layout_gravity="left|center"
            android:onClick="onReturnBackClick"
            android:padding="10dp"
            android:src="@drawable/return_back"
            android:tint="@color/white" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_toRightOf="@+id/btnGoBack"
            android:background="#90909090" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/basket"
            android:textColor="@color/yellow"
            android:textSize="20sp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <mehdi.sakout.fancybuttons.FancyButton
            android:id="@+id/btnChooseEth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:onClick="onChooseEthClick"
            fancy:fb_borderColor="@color/darkBrown"
            fancy:fb_borderWidth="1dp"
            fancy:fb_defaultColor="@color/bezch2"
            fancy:fb_radius="15dp"
            fancy:fb_text="@string/chooseEth"
            fancy:fb_textColor="@color/color9" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:padding="5dp"
            android:text="Общая цена: "
            android:textColor="@color/color9"
            android:textSize="17sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/tvTotalPriceForAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:textColor="@color/green"
            android:textSize="20sp" />
    </LinearLayout>

    <!--Button
        android:id="@+id/btnChooseEvrth"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chooseEth"
        android:layout_margin="7dp"
        android:backgroundTint="@color/color11"
        android:onClick="onChooseEvrthClick"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.Material.Widget.Button"/!-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="60dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@drawable/boarders2">

            <!--ListView
                android:layout_gravity="center"
                android:id="@+id/lvOrders"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </ListView!-->
            <LinearLayout
                android:id="@+id/llBooks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:background="@drawable/boarders3"
                android:orientation="vertical">

            </LinearLayout>

        </ScrollView>

        <RelativeLayout
            android:id="@+id/rlAction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:visibility="invisible">

            <mehdi.sakout.fancybuttons.FancyButton
                android:id="@+id/btnDelete"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:layout_alignParentLeft="true"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="100dp"
                android:onClick="onDeleteClick"
                android:padding="5dp"
                fancy:fb_borderColor="@color/darkBrown"
                fancy:fb_borderWidth="1dp"
                fancy:fb_defaultColor="@color/red2"
                fancy:fb_iconResource="@drawable/delete2"
                fancy:fb_radius="15dp" />

            <!--Button
                android:layout_marginLeft="30dp"
                android:layout_alignParentLeft="true"
                android:onClick="onDeleteClick"
                android:layout_marginRight="100dp"
                android:text="@string/delete"
                android:id="@+id/btnDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" /!-->

            <mehdi.sakout.fancybuttons.FancyButton
                android:id="@+id/btnForm"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_gravity="center"
                android:layout_marginEnd="27dp"
                android:layout_marginRight="30dp"
                android:gravity="center"
                android:onClick="onRegisterClick"
                fancy:fb_borderColor="@color/darkBrown"
                fancy:fb_borderWidth="1dp"
                fancy:fb_defaultColor="@color/biruz"
                fancy:fb_radius="15dp"
                fancy:fb_text="@string/toRegistration"
                fancy:fb_textColor="@color/color9" />

            <!--Button
                android:layout_marginRight="30dp"
                android:onClick="onRegisterClick"
                android:text="@string/toRegistration"
                android:id="@+id/btnForm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="27dp" /!-->
        </RelativeLayout>
    </RelativeLayout>
</LinearLayout>